changed quest progress and badge api
